# Namaste

./: .env.example  .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
Namaste/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  apps.py  context_processors.py  forms.py  mistral.py  models.py  signals.py  telegram_bot.py  views.py
core/migrations/: 0001_initial.py  0002_alter_review_options.py  0003_remove_application_practice.py  0004_rename_image_coach_photo.py  0005_application_appointment_time_alter_review_coach.py  0006_schedule.py  0007_alter_schedule_options_remove_schedule_days_and_more.py  0008_rename_time_schedule_start_time_schedule_end_time.py  0009_remove_schedule_day_of_week_remove_schedule_name.py  0010_remove_schedule_end_time.py  0011_alter_application_appointment_date_and_more.py  0012_application_schedule.py  0013_remove_application_appointment_date_and_more.py  0014_remove_schedule_location_alter_application_status.py  0017_remove_review_photo.py  (+14 more)
templates/: application_class_form.html  application_detail.html  applications_list.html  base.html  contraindications.html  include_application_card.html  include_coach_card.html  include_nav_menu.html  include_practice_card.html  include_review_card.html  include_schedule_card.html  landing.html  password_reset_email.html  practice_class_form.html  review_class_form.html  reviews_list.html  schedule_class_form.html  schedule_list.html  schedules_list.html  thanks.html  users_login_registr.html  users_message.html
users/: forms.py  models.py  urls.py  views.py
(+5 files in other folders)
