[project]
name = "django-consult-413"
version = "0.1.0"
description = ""
authors = [
    {name = "VladimirMonin",email = "vladimir.monin2016@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.2,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-debug-toolbar (>=5.2.0,<6.0.0)",
    "django-jazzmin (>=3.0.1,<4.0.0)",
    "mistralai (>=1.9.3,<2.0.0)",
    "python-telegram-bot (>=22.3,<23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
